codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__interrupt_exec_marks_failed.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 4305
expression: exec_blob
---
• shell sleep 1
  └ no output
